(executable
 (name Day1)
 (modules Day1)
 (public_name day1)
 (libraries fs.lib fp))

(executable
 (name Day2)
 (modules Day2)
 (public_name day2)
 (libraries fs.lib fp))

(executable
 (name Day3)
 (modules Day3)
 (public_name day3)
 (libraries fs.lib fp str))

(executable
 (name Day4)
 (modules Day4)
 (public_name day4)
 (libraries fs.lib fp str))

(executable
 (name Day5)
 (modules Day5)
 (public_name day5)
 (libraries fs.lib fp str))
